WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
118862
[wk2] Ensure that the plugin layer is removed completely when the PluginProcess crashes
https://bugs.webkit.org/show_bug.cgi?id=118862
Summary
[wk2] Ensure that the plugin layer is removed completely when the PluginProce...
Tim Horton
Reported
2013-07-18 14:13:39 PDT
Currently it isn't, which can cause the unavailable plugin indicator to not paint. <
rdar://problem/14474988
>
Attachments
patch
(3.67 KB, patch)
2013-07-18 14:21 PDT
,
Tim Horton
andersca
: review+
Details
Formatted Diff
Diff
ignore this one
(5.00 KB, patch)
2013-07-18 14:49 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-07-18 14:21:15 PDT
Created
attachment 207021
[details]
patch
Tim Horton
Comment 2
2013-07-18 14:49:39 PDT
Created
attachment 207023
[details]
ignore this one
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug