[wk2] Ensure that the plugin layer is removed completely when the PluginProcess crashes https://bugs.webkit.org/show_bug.cgi?id=118862

Reviewed by Anders Carlsson.

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::PluginView):
Add m_pluginProcessHasCrashed.

(WebKit::PluginView::platformLayer):
Don't return the plugin's layer if it has crashed.

(WebKit::PluginView::pluginProcessCrashed):
Set m_pluginProcessHasCrashed.
Cause a style recalc so that we rebuild the layer tree; our layer won't be included.

* WebProcess/Plugins/PluginView.h:
Add m_pluginProcessHasCrashed.


Canonical link: https://commits.webkit.org/136727@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152866 268f45cc-cd09-0410-ab3c-d52691b4dbfc